Исправлены предупреждения Google Checks: замена Collectors.toList() на toList(), убран peek, добавлены константы, создано кастомное исключение