@@ -14,9 +14,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/tags")
@@ -30,7 +28,7 @@ public class TagController {
   public ResponseEntity<List<TagResponse>> getAllTags() {
     List<TagResponse> responses = tagRepository.findAll().stream()
         .map(tagMapper::toResponse)
-        .collect(Collectors.toList());
+        .toList();
     return ResponseEntity.ok(responses);
   }
 
